--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BlockchainExplorer",
+  "name": "blockchain_explorer",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4"
+    "react-native": "0.57.4",
+    "hex2ascii": "0.0.3"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
