--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
-    "hex2ascii": "0.0.3"
+    "hex2ascii": "0.0.3",
+    "react-native-camera": "^1.3.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
