--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,9 @@ dependencies {
         compile ('com.google.android.gms:play-services-vision:12.0.1') {
             force = true
         }
+        compile ("com.android.support:support-v4:27.1.1") {
+            force = true //<-- force dependency resolution to 27.1.1 in my case
+        }
     }
 }
 
